# awful-idea-name-wasm

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
tests/: web.rs
