[package]
name = "awful-idea-name-wasm"
version = "0.4.0"
authors = ["Timothy Warrington <tim.warrin@gmail.com>"]
edition = "2018"
description = "Generate awful idea names for your next awful idea"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
awful-idea-name = { git = "https://github.com/tjrawrin/awful-idea-name" }
wasm-bindgen = "0.2.63"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[profile.release]
lto = true
opt-level = "z"
