[package]
name = "awful-idea-name-wasm"
version = "0.7.0"
authors = ["Timothy Warrington <tim.warrin@gmail.com>"]
edition = "2018"
description = "Generate awful idea names for your next awful idea"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
awful-idea-name = { git = "https://github.com/tjrawrin/awful-idea-name" }
wasm-bindgen = "0.2.63"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dev-dependencies]
regex = "1.3.9"
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
